envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: php_backend
                            # you can remove the next line if you want to avoid the deprecation warning
                            max_grpc_timeout: 0s
                      cors:
                        allow_origin_string_match:
                          - exact: "http://localhost:3000"
                          - exact: "http://127.0.0.1:3000"
                        allow_methods: "GET, PUT, DELETE, POST, OPTIONS"
                        allow_headers: >
                          content-type, x-grpc-web, x-user-agent, grpc-timeout,
                          x-accept-content-transfer-encoding, x-accept-response-streaming,
                          x-forwarded-for, user-agent, cache-control, keep-alive
                        expose_headers: "grpc-status, grpc-message"
                        max_age: "1728000"
                        allow_credentials: false
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: php_backend
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}   # gRPC upstream needs HTTP/2
      lb_policy: round_robin
      load_assignment:
        cluster_name: php_backend
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: php73-grpc-backend   # docker-compose service name
                      port_value: 9001   # must match RR gRPC listen port
